src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-35.snap
---
source: src/lexer.rs
description: ">>="
---
[
    Token {
        kind: ShiftRightAssign,
        value: None,
    },
]
