src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-37.snap
---
source: src/lexer.rs
description: "**"
---
[
    Token {
        kind: Pow,
        value: None,
    },
]
