src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-4.snap
---
source: src/lexer.rs
description: +=2
---
[
    Token {
        kind: AddAssign,
        value: None,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
    },
]
