src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-40.snap
---
source: src/lexer.rs
description: ">>"
---
[
    Token {
        kind: RightShift,
        value: None,
    },
]
