src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-41.snap
---
source: src/lexer.rs
description: +
---
[
    Token {
        kind: Plus,
        value: None,
    },
]
