src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-42.snap
---
source: src/lexer.rs
description: "-"
---
[
    Token {
        kind: Minus,
        value: None,
    },
]
