src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-43.snap
---
source: src/lexer.rs
description: "*"
---
[
    Token {
        kind: Mul,
        value: None,
    },
]
