src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-45.snap
---
source: src/lexer.rs
description: /
---
[
    Token {
        kind: Div,
        value: None,
    },
]
