src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-48.snap
---
source: src/lexer.rs
description: "@"
---
[
    Token {
        kind: MatrixMul,
        value: None,
    },
]
