src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-5.snap
---
source: src/lexer.rs
description: xX = 2
---
[
    Token {
        kind: Identifier,
        value: String(
            "xX",
        ),
    },
    Token {
        kind: Assign,
        value: None,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
    },
]
