src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-51.snap
---
source: src/lexer.rs
description: "&"
---
[
    Token {
        kind: BitAnd,
        value: None,
    },
]
