src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-52.snap
---
source: src/lexer.rs
description: "|"
---
[
    Token {
        kind: BitOr,
        value: None,
    },
]
